tests/paczka2/big_fuzzy/81552114.err
Error in line 1: A354 A354 55,8
Error in line 5: 1B4NidJ03 A99u 13,9
Error in line 2: 1B4NidJ03 A354 26,2
Error in line 9: 1B4NidJ03 A996 20,2
Error in line 10: sJy A354 24,2
Error in line 14: sJy A515 4,9
Error in line 27: sJy S828 15,9
Error in line 32: sJy A515 22,4
Error in line 22: RBP2ksH0exO A996 60,5
Error in line 45: Jb7PpEe S828 73,9
Error in line 36: sJy A996 55,2
Error in line 55: nPpWBMSVN A354 82,8
Error in line 44: 1B4NidJ03 A515 61,0
Error in line 70: Jb7PpEe A515 70,8
Error in line 75: vxkyS A354 -2,6
Error in line 68: nPpWBMSVN A996 53,8
Error in line 81: Jb7PpEe A515 5,6
Error in line 65: sJy A354 230,9
Error in line 99: sJy A996 62,2
Error in line 101: nPpWBMSVN A354 76,0
Error in line 112: nPpWBMSVN A996 39,8
Error in line 105: 1B4NidJ03 A996 24,4
Error in line 133: 1B4NidJ03 A{1{ 79,{
Error in line 134: nPpWBMSVN S828 1100,0
Error in line 135: nPpWBMSVN A996 39,2
Error in line 137: 1B4NidJ03 A515 349,8
Error in line 146: A354 S828 82,9
Error in line 147: 1B4NidJ03 S828 41,5
Error in line 151: vxkyS A515 58,6
Error in line 162: 1B4NidJ03 A996 21,9
Error in line 143: nPpWBMSVN S828 118,3
Error in line 168: Jb7PpEe A354 12,6
Error in line 172: Jb7PpEe A996 51,7
Error in line 171: A354 A515 70,7
Error in line 174: Jb7PpEe A515 82,4
Error in line 180: Jb7PpEe A996 10,4
Error in line 183: vxkyS A515 23,8
Error in line 185: vxkyS A354 95,4
Error in line 192: sJy A996 60,5
Error in line 202: sJy A354 83,3
Error in line 218: RBP2ksH0exO A354 53,7
Error in line 231: A354 A515 4,6
Error in line 241: Jb7PpEe A996 89,5
Error in line 246: RBP2ksH0exO A354 62,6
